--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -44,3 +44,6 @@ table {
 .boxShadow{
 	box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1)
 }
+::-webkit-scrollbar { width: 2px; height: 4px; /*margin-right: -10px;*/ position: absolute; right: 0; /*right: -30px;*/ } 
+::-webkit-scrollbar-thumb { border-radius: 5px; /*-webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);*/ /*background: rgba(0, 0, 0, 0.2);*/ background:#5f9bac; }
+::-webkit-scrollbar-track { /*-webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);*/ border-radius: 0; background: rgba(0, 0, 0, 0.1); }
