--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -2,7 +2,8 @@ body{
   width: 100%;
   height: 100%;
   color: #fff;
-  background-color:rgba(0, 0, 0, .5);
+  /* background-color:rgba(0, 0, 0, .5); */
+  background: url('./bg3.jpg');
   zoom:1;
   overflow: hidden;
 }
