--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -9,7 +9,7 @@ body{
 }
 @font-face{
   font-family: 'number';
-  src: url("./font/number.ttf");
+  src: url("./font/DS-DIGI.ttf");
 }
 @font-face{
   font-family: 'alhyznh';
